2009-01-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/DataUtilities.java
    (equal(double[][], double[][])): New method,
    * tests/org/jfree/data/junit/DataUtilitiesTests.java
    (testEqual): New method,
    (suite): Likewise,
    (main): Likewise.

2009-01-23  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/StatisticalLineAndShapeRenderer.java
    (drawItem): Put drawing code in separate passes.

2009-01-23  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 2511330 by Peter Kolb, plus hashCode method by DG:
    * source/org/jfree/chart/renderer/category/StatisticalLineAndShapeRenderer.java
    (drawItem): Check useFillPaint and drawOutlines flags separately,
    (hashCode): New method.

2009-01-23  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 2511330 by Peter Kolb:
    * source/org/jfree/chart/renderer/category/LevelRenderer.java
    (calculateItemWidth): Take into account seriesVisible flags,
    (calculateBarW0): Likewise,
    (drawItem): Likewise.

2009-01-23  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/LevelRenderer.java
    (LevelRenderer): Set default legend shape,
    (hashCode): New method.

2009-01-21  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java
    (medianVisible): New field,
    (meanVisible): Likewise,
    (BoxAndWhiskerRenderer): Initialise new fields,
    (isMeanVisible): New method,
    (setMeanVisible): Likewise,
    (isMedianVisible): New method,
    (setMedianVisible): Likewise,
    (drawHorizontalItem): Updated to check new flags,
    (drawVerticalItem): Likewise,
    (equals): Updated to check new fields,
    * tests/org/jfree/chart/renderer/category/junit/BoxAndWhiskerRendererTests.java
    (testEquals): Check new fields.

2009-01-21  David Gilbert  <david.gilbert@object-refinery.com>
