@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2008, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2009, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,7 +27,7 @@
  * ---------------------
  * AbstractRenderer.java
  * ---------------------
- * (C) Copyright 2002-2008, by Object Refinery Limited.
+ * (C) Copyright 2002-2009, by Object Refinery Limited.
  *
  * Original Author:  David Gilbert (for Object Refinery Limited);
  * Contributor(s):   Nicolas Brodu;
@@ -82,6 +82,8 @@
  * 17-Jun-2008 : Added legendShape, legendTextFont and legendTextPaint
  *               attributes (DG);
  * 18-Aug-2008 : Added clearSeriesPaints() and clearSeriesStrokes() (DG);
+ * 28-Jan-2009 / Equals method doesn't test Shape equality correctly (DG);
+ * 
  */
 
 package org.jfree.chart.renderer;
@@ -3669,13 +3671,13 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
         ) {
             return false;
         }
-        if (!ObjectUtilities.equal(this.shape, that.shape)) {
+        if (!ShapeUtilities.equal(this.shape, that.shape)) {
             return false;
         }
         if (!ObjectUtilities.equal(this.shapeList, that.shapeList)) {
             return false;
         }
-        if (!ObjectUtilities.equal(this.baseShape, that.baseShape)) {
+        if (!ShapeUtilities.equal(this.baseShape, that.baseShape)) {
             return false;
         }
         if (!ObjectUtilities.equal(this.itemLabelsVisible,
